# rd_course_project

./: .env-example  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c41c97f94a1_initial_migration.py  d0340f2fde37_initial_migration.py
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/api/: endpoints.py
app/frontend/static/js/: scripts.js
app/frontend/templates/: base.html  cve_detail.html  details.html  index.html
app/utils/: cve_loader.py  initial_load.py  scheduler.py  update_load.py
docker/: Dockerfile  entrypoint.sh
